# nf-e

./: Cargo.toml  LICENSE  README.md
docs/: nfe.drawio
nf-e-macros/: Cargo.toml
nf-e-macros/src/: lib.rs
src/: config.rs  enums.rs  lib.rs  models.rs  states.rs  utils.rs
src/models/: mod.rs
tests/credentials/: cert.p12  cert.pem  key.pem
tests/fixtures/: address.xml  authorized.xml  detail.xml  details.xml  identification.xml  info.xml  info_authorized.xml  info_without_authorized.xml  issuer.xml  item.xml  nfe.xml  payments.xml  tax.xml  taxable_address.xml  total.xml  transport.xml
tests/fixtures/enums/: icms.xml
