[package]
name = "nf-e"
version = "0.1.0"
edition = "2024"
readme = "./README.md"
license = "MIT"
keywords = ["nfe", "nf-e", "nfce", "nfc-e"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
quick-xml = { version = "0.38.1", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
